# django-reportcraft

./: MANIFEST.in  README.md  TODO  pyproject.toml
.github/workflows/: build-docs.yml  docs_pages.yaml  test-poetry.yaml
demo/: settings.py  urls.py
demo/example/: forms.py  models.py  urls.py  utils.py  views.py
demo/example/fixtures/: initial-data.yml
demo/example/migrations/: 0001_initial.py  0002_alter_institution_name.py  0003_institution_province_alter_institution_name.py  0004_institution_latitude_institution_longitude.py  0005_person_gender.py  0006_country.py  0007_institution__country.py  0008_remove_institution_country.py  0009_rename__country_institution_country.py  0010_alter_institution_country.py  0011_country_continent_country_subregion.py
demo/example/static/example/: demo.min.css  (+2 more)
demo/example/templatetags/: settings.py
demo/templates/: base.html  bs5.html  tabler.html
demo/templates/registration/: login.html
docs/source/: api.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  usage.rst
reportcraft/: apps.py  countries.py  entries.py  forms.py  models.py  urls.py  utils.py  views.py
reportcraft/migrations/: 0001_initial.py  0009_refactor_bar_entries.py
reportcraft/static/reportcraft/: builder.min.css  builder.min.css.map  builder.scss  main.min.css  main.min.css.map  main.scss  reportcraft.js  reportcraft.min.css  reportcraft.min.css.map  reportcraft.min.js  reportcraft.scss  reports.js  reports.min.css  reports.min.css.map  reports.min.js  reports.scss
reportcraft/static/reporter/: main.min.css  main.min.css.map  reports.js
reportcraft/templates/reportcraft/: base.html  default.html  editor.html  index.html  list.html  report-editor.html  report-embed.html  report-list-tools.html  report-plotjs.html  report.html  source-editor.html  source-list-tools.html  tool-icon.html
reportcraft/templates/reporter/: base.html  index.html  list.html  report-editor.html  report-list-tools.html  report.html  source-editor.html  source-list-tools.html
reportcraft/templatetags/: icons.py  reportcraft.py  reporter.py
(+284 files in other folders)
